mobile scrollbar fix

--- a/src/SASS/Body.scss
+++ b/src/SASS/Body.scss
@@ -41,4 +41,7 @@
         grid-template-columns: 1fr;
         grid-auto-rows: 260px;
     }
+    .body::-webkit-scrollbar {
+        width: 7px;
+    }
 }
